--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    background-color: #282c30;
 }
 
 nav {
@@ -12,7 +11,7 @@ nav {
     display: inline-block;
     cursor: pointer;
     padding: 14px 20px;
-    background-color: #333;
+    background-color: #0d1117;
     color: white;
 }
 
@@ -29,7 +28,7 @@ nav ul {
     margin: 0;
     padding: 0;
     width: 250px;
-    background-color: #333;
+    background-color: #0d1117;
     position: fixed;
     top: 0;
     left: -250px;
@@ -50,7 +49,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #111;
+    background-color: #010409;
 }
 
 section {
@@ -61,5 +60,33 @@ section {
 }
 
 h1 {
-    color: #333;
+    color: #ffffff;
+}
+
+p {
+    color: #e6e6e6;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px; /* Adjust the gap between buttons as needed */
+    padding: 20px; /* Optional: Add padding if needed */
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #0d1117;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #010409;
 }
