--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,37 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #282c30;
+    color: #e6e6e6;
+    margin: 0;
+    padding: 0;
 }
 
 nav {
-    position: relative;
-}
-
-.menu-icon {
-    display: inline-block;
-    cursor: pointer;
-    padding: 14px 20px;
     background-color: #0d1117;
-    color: white;
+    padding: 10px;
 }
 
-.menu-icon .bar {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    margin: 5px 0;
-    transition: 0.4s;
-}
-
-nav ul {
-    list-style-type: none;
+.nav-links {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
     margin: 0;
     padding: 0;
-    width: 250px;
-    background-color: #0d1117;
-    position: fixed;
-    top: 0;
-    left: -250px;
-    height: 100%;
-    transition: 0.3s;
-    overflow-x: hidden;
 }
 
-nav ul li {
-    display: block;
+.nav-links li {
+    display: inline;
 }
 
-nav ul li a {
-    display: block;
+.nav-links li a {
     color: white;
-    padding: 14px 20px;
     text-decoration: none;
+    padding: 10px 20px;
 }
 
-nav ul li a:hover {
+.nav-links li a:hover,
+.nav-links li a.active {
     background-color: #010409;
 }
 
@@ -56,7 +39,7 @@ section {
     padding: 20px;
     margin: 20px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    background-color: #333;
 }
 
 h1 {
@@ -83,10 +66,25 @@ p {
     background-color: #0d1117;
     text-align: center;
     text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
 }
 
 .button:hover {
+    background-color: #010409;
+}
+
+/* Specific active button styles based on the page */
+.home-active .home-button {
+    background-color: #010409;
+}
+
+.about-active .about-button {
+    background-color: #010409;
+}
+
+.projects-active .projects-button {
+    background-color: #010409;
+}
+
+.contact-active .contact-button {
     background-color: #010409;
 }
