--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ p {
 
 .button-container {
     display: flex;
+    flex-direction: column; /* Align buttons vertically */
     justify-content: center;
     align-items: center;
     gap: 10px; /* Adjust the gap between buttons as needed */
@@ -59,13 +60,17 @@ p {
 }
 
 .button {
-    display: inline-block;
-    padding: 40px 140px;
+    display: block;
+    width: 100%; /* Full width */
+    max-width: 300px; /* Optional: Set a maximum width for the buttons */
+    padding: 20px 0; /* Adjust padding as needed */
     font-size: 45px;
     color: #fff;
     background-color: #0d1117;
     text-align: center;
     text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 .button:hover {
