--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 nav {
-    background-color: #0d1117;
+    background-color: #161616;
     padding: 10px;
 }
 
@@ -32,7 +32,7 @@ nav {
 
 .nav-links li a:hover,
 .nav-links li a.active {
-    background-color: #010409;
+    background-color: #161616;
 }
 
 section {
@@ -66,7 +66,7 @@ p {
     padding: 20px 0; /* Adjust padding as needed */
     font-size: 45px;
     color: #fff;
-    background-color: #0d1117;
+    background-color: #161616;
     text-align: center;
     text-decoration: none;
     border-radius: 5px;
@@ -74,22 +74,26 @@ p {
 }
 
 .button:hover {
-    background-color: #010409;
+    background-color: #161616;
 }
 
 /* Specific active button styles based on the page */
 .home-active .home-button {
-    background-color: #010409;
+    background-color: #161616;
 }
 
 .about-active .about-button {
-    background-color: #010409;
+    background-color: #161616;
 }
 
 .projects-active .projects-button {
-    background-color: #010409;
+    background-color: #161616;
 }
 
 .contact-active .contact-button {
-    background-color: #010409;
+    background-color: #161616;
+}
+
+img {
+    width: 600px;
 }
